--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Nuxt dev/build outputs
 .output
-.data
 .nuxt
 .nitro
 .cache
@@ -12,13 +11,38 @@ node_modules
 # Logs
 logs
 *.log
-
-# Misc
-.DS_Store
-.fleet
-.idea
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+pnpm-debug.log*
 
 # Local env files
 .env
 .env.*
 !.env.example
+
+# IDE / Editor
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.DS_Store
+
+# Testing
+coverage
+*.lcov
+.nyc_output
+
+# Misc
+.cache
+*.tsbuildinfo
+.temp
+.tmp
+
+# OS
+Thumbs.db
