--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@nuxt/eslint": "^1.9.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@types/node": "^24.7.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
